# submission

./: Makefile  README.md  docker-tc.yml  docker-xdbc.yml
xdbc-client/: CMakeLists.txt  Dockerfile  Makefile  README.md
xdbc-client/optimizer/: create_basethroughputs.py  main.py  optimize.py  runner.py  test_envs.py  test_runs.py
xdbc-client/optimizer/config/: helpers.py  loader.py  metrics_client.py  metrics_server.py
xdbc-client/optimizer/optimizers/: __init__.py  bruteforce.py  heuristics.py
xdbc-client/tests/: CMakeLists.txt  Tester.cpp  Tester.h  test_xclient.cpp
xdbc-client/tests/schemas/: inputeventsm.json  iotm.json  lineitem_half_sf10.json  lineitem_sf10.json  ss13husallm.json
xdbc-client/xdbc/: customQueue.h  metrics_calculator.h  utils.h  xclient.cpp  xclient.h
xdbc-client/xdbc/Decompression/: Decompressor.cpp  Decompressor.h
xdbc-server/: CMakeLists.txt  Dockerfile  Makefile  README.md  ch.cpp  ch.h  chcsv.cpp  chcsv.h  compresslibs.cpp  compresslibs.h  main.cpp  metrics_calculator.h  pg.cpp  pg.h  xdbcserver.cpp  xdbcserver.h
xdbc-server/Compression/: Compressor.cpp  Compressor.h
xdbc-server/DataSources/: DataSource.cpp  DataSource.h  csv.hpp  deserializers.h  fast_csv.h  fast_float.h
xdbc-server/DataSources/CHReader/: CHReader.cpp  CHReader.h
xdbc-server/DataSources/CSVReader/: CSVReader.cpp  CSVReader.h
xdbc-server/DataSources/PGReader/: PGReader.cpp  PGReader.h
xdbc-server/cmake/modules/: FindCityHash.cmake
xdbc-server/experiments/: build_and_start.sh
